# LinuxC

LinuxC/LinuxC/: LinuxC.sln
LinuxC/LinuxC/LinuxC/: LinuxC.vcxproj  main.cpp
cmakeLinuxC/cmakeLinuxC/: CMakeLists.txt  cmakeLinuxC.cpp  cmakeLinuxC.h
cmakeLinuxC/cmakeLinuxC/test/: Findupdate.cpp  Findupdate.h  Solution.cpp  Solution.h
